# learning_client-server

./: README.md  README.md~
client/: CMakeLists.txt  client.cpp  client.h  client.ui  dom_item.cpp  dom_item.h  drop_list_widget.cpp  drop_list_widget.h  file_model.cpp  file_model.h  long_actions.cpp  long_actions.h  mail_reader.cpp  mail_reader.h  main.cpp
data/: index.html  login-error.html  login.html  not-found.html
http_server/: CMakeLists.txt  dir_scanner.cpp  dir_scanner.h  http_server.cpp  http_server.h  logger.cpp  logger.h  long_actions.cpp  long_actions.h  main.cpp  server.cpp  server.h  tcp_server.cpp  tcp_server.h
